@@ -90,7 +90,7 @@ case "${1}" in
       log_info_msg "Cleaning file systems:" 
 
       if [ "${SKIPTMPCLEAN}" = "" ]; then
-         log_info_msg2 "\n /tmp" 
+         log_info_msg2 " /tmp" 
          cd /tmp &&
          find . -xdev -mindepth 1 ! -name lost+found -delete || failed=1
       fi
