@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20111108">
-<!ENTITY releasedate "Nov 8, 2011">
+<!ENTITY version "SVN-20111114">
+<!ENTITY releasedate "Nov 14, 2011">
 <!ENTITY copyrightdate "1999-2011"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "7.1">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
