@@ -1,3 +1,11 @@
+2011-11-14  Bruce Dubbs <bdubbs@linuxfromscratch.org>
+
+   * The following are from suggestions by DJ Lucas
+   ** General cleanup of scripts
+   ** Move consolelog function to rc
+   ** Clean up boot logging functions
+   ** Fix interactive prompt between run level S and target run level
+
 2011-10-06  Bryan Kadzban <bryan@linuxfromscratch.org>
 
    * Add configuration for udev_retry, and remove --type=failed (which does
